<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space"
    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="80dp">

        <TableRow
            android:background="@color/gold">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/recent"
                android:textColor="@color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="30sp"
                android:text="@string/current"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
               android:src="@drawable/ic_redx"
                android:padding="30sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="30sp"
                android:text="@string/time"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"
                android:padding="30sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="30sp"
                android:text="@string/time2"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_redx"
                android:padding="30sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="30sp"
                android:text="@string/time3"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"
                android:padding="30sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="30sp"
                android:text="@string/time4"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"
                android:padding="30sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


        </TableRow>




    </TableLayout>

</RelativeLayout>