<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space"
    tools:context=".RecentChecks">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner1"
        android:layout_marginTop="40dp"
        android:layout_marginStart="13dp"
        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Display"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/display"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="80dp">

        <TableRow
            android:background="@color/gold">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/recent"
                android:textColor="@color/white"
                android:padding="10sp"

                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="30sp"
                android:id="@+id/first"
                android:text="@string/current"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_redx"
                android:padding="30sp"
                android:textSize="12sp"
                android:id="@+id/firstphoto"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="30sp"
                android:id="@+id/second"
                android:text="@string/time"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"
                android:padding="30sp"
                android:id="@+id/secondphoto"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="30sp"
                android:id="@+id/third"
                android:text="@string/time2"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_redx"
                android:padding="30sp"
                android:textSize="12sp"
                android:id="@+id/thirdphoto"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="30sp"
                android:id="@+id/fourth"
                android:text="@string/time3"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"
                android:padding="30sp"
                android:textSize="12sp"
                android:id="@+id/fourthphoto"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="30sp"
                android:id="@+id/fifth"
                android:text="@string/time4"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"
                android:padding="30sp"
                android:id="@+id/fifthphoto"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


        </TableRow>




    </TableLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/gold"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>t>