<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space"
    >

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="0dp"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="80dp"
            android:background="@android:color/white">

            <TableRow android:background="@color/gold">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/service"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:text="@string/blog"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:src="@drawable/ic_redx"
                    android:textSize="12sp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:text="@string/demo"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:src="@drawable/ic_check"
                    android:textSize="12sp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:text="@string/DNS"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:src="@drawable/ic_redx"
                    android:textSize="12sp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:text="@string/Dolibar"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:src="@drawable/ic_check"
                    android:textSize="12sp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:text="@string/FTP"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:src="@drawable/ic_check"
                    android:textSize="12sp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:text="@string/FTP"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:src="@drawable/ic_check"
                    android:textSize="12sp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:text="@string/FTP"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:src="@drawable/ic_check"
                    android:textSize="12sp" />


            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:text="@string/FTP"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="30sp"
                    android:src="@drawable/ic_check"
                    android:textSize="12sp" />


            </TableRow>


        </TableLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>